# Test-for-Claude-

./: .gitignore  BLACKBOX.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPS.md  LYRA_v4_2_AGENT_EXECUTABLE_BUILD_CANON.md  PHASE0_COMPLETE.md  TODO.md  VERSIONING.md  deny.toml  test_output.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/lyralang/: BYTECODE.md  CODEGEN.md  CONCURRENCY.md  EFFECTS.md  ERRORS.md  FFI.md  GRAMMAR.md  LIFETIMES.md  LINEARITY.md  LSP.md  MACROS.md  METAPROGRAMMING.md  MODALITY.md  PATTERNS.md  (+12 more)
k0/: Cargo.toml
k0/benches/: codec_bench.rs  digest_bench.rs  entropy_bench.rs  time_bench.rs
k0/specs/: constitutional_math.md
k0/src/: lib.rs
k0/src/codec/: decoder.rs  encoder.rs  error.rs  mod.rs  types.rs  varint.rs
k0/src/digest/: blake3.rs  mod.rs  sha3.rs
k0/src/drift/: detector.rs  error.rs  mod.rs
k0/src/entropy/: error.rs  mod.rs  pool.rs
k0/src/errors/: catalog.rs  code.rs  mod.rs
k0/src/genesis/: hash.rs  mod.rs  state.rs  trust_roots.rs
k0/src/incident/: mod.rs  record.rs  taxonomy.rs
k0/src/logging/: entry.rs  mod.rs  sink.rs
k0/src/recovery/: mod.rs  protocol.rs
k0/src/self_verify/: error.rs  mod.rs  verifier.rs
k0/src/time/: clock.rs  mod.rs
k0/src/verifier/: determinism.rs  error.rs  mod.rs
k0/tests/: foundation_integration.rs
k1/: Cargo.toml
k1/src/: lib.rs
lyralang/: Cargo.toml
lyralang/src/: builtins.rs  lib.rs
lyralang/src/bytecode/: emitter.rs  error.rs  mod.rs
lyralang/src/checker/: error.rs  infer.rs  mod.rs
lyralang/src/codegen/: error.rs  generator.rs  mod.rs
lyralang/src/concurrency/: checker.rs  error.rs  mod.rs
lyralang/src/effects/: error.rs  infer.rs  mod.rs
lyralang/src/errors/: analyzer.rs  error.rs  mod.rs
lyralang/src/ffi/: error.rs  mod.rs
lyralang/src/lexer/: error.rs  lexer.rs  mod.rs  span.rs  token.rs
lyralang/src/lifetimes/: error.rs  mod.rs
lyralang/src/linear/: checker.rs  error.rs  mod.rs
lyralang/src/lsp/: mod.rs
lyralang/src/macros/: mod.rs
lyralang/src/meta/: mod.rs
lyralang/src/modal/: checker.rs  error.rs  mod.rs
lyralang/src/parser/: ast.rs  error.rs  mod.rs  parser.rs
lyralang/src/patterns/: error.rs  mod.rs
lyralang/src/probabilistic/: mod.rs
lyralang/src/proof/: mod.rs
lyralang/src/repl/: mod.rs
lyralang/src/semantics/: error.rs  evaluator.rs  mod.rs
lyralang/src/sourcemap/: mod.rs
lyralang/src/stdlib/: compiler.rs  error.rs  mod.rs
lyralang/src/syntax_ext/: mod.rs
lyralang/src/temporal/: checker.rs  error.rs  mod.rs
lyralang/src/testing/: mod.rs
lyralang/src/traits/: error.rs  mod.rs  registry.rs
lyralang/src/typelevel/: mod.rs
lyralang/src/types/: effect.rs  mod.rs  ty.rs
lyralang/tests/: error_handling_integration.rs  language_integration.rs  seed_bytecode_emitter_integration.rs  seed_code_generator_integration.rs  seed_concurrency_integration.rs  seed_effect_checker_integration.rs  seed_formal_semantics_integration.rs  seed_lexer_integration.rs  seed_linear_checker_integration.rs  seed_modal_checker_integration.rs  seed_parser_integration.rs  seed_self_reference_integration.rs  seed_stdlib_minimal_integration.rs  seed_temporal_logic_integration.rs  seed_test_framework_integration.rs  seed_type_checker_integration.rs  trait_system_integration.rs
shells/: Cargo.toml
shells/src/: lib.rs
slices/: Cargo.toml
slices/src/: lib.rs
(+415 files in other folders)
