[package]
name = "k1"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lyra higher symbolic systems: memory, reasoning, planning, retrieval, coordination, and domain engines"

[dependencies]
k0 = { path = "../k0" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
