[package]
name = "lyralang"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lyra language definition, compiler/toolchain, language services, and self-hosting pipeline"

[dependencies]
k0 = { path = "../k0" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
unicode-ident = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
